--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -11,7 +11,7 @@
 
 nav:
   # Navigation bar logo image
-  logo:
+  logo: 
   display_title: true
   # Whether to fix navigation bar
   fixed: false
@@ -25,6 +25,12 @@ menu:
 # --------------------------------------
 # Code Blocks Settings
 # --------------------------------------
+
+  首页: / || fas fa-home
+  归档: /archives/ || fas fa-archive
+  分类: /categories/ || fas fa-folder-open
+  友链: /link/ || fas fa-link
+  关于: /about/ || fas fa-heart
 
 code_blocks:
   # Code block theme: darker / pale night / light / ocean / false
@@ -45,6 +51,9 @@ code_blocks:
 # Formal:
 #   icon: link || the description || color
 social:
+  fa-brands fa-github: https://github.com/ru1ky || Github
+  fa-brands fa-steam: https://steamcommunity.com/id/ru1ky || Steam
+  fa-brands fa-telegram: https://t.me/cat_tery || Telegram
   # fab fa-github: https://github.com/xxxxx || Github || '#24292e'
   # fas fa-envelope: mailto:xxxxxx@gmail.com || Email || '#4a7dbe'
 
@@ -55,17 +64,17 @@ social:
 favicon: /img/favicon.png
 
 avatar:
-  img: /img/butterfly-icon.png
+  img: r2.ru1ky.top/avatar.jpg
   effect: false
 
 # Disable all banner images
 disable_top_img: false
 
 # If the banner of page not setting, it will show the default_top_img
-default_top_img:
+default_top_img: r2.ru1ky.top/banner.png
 
 # The banner image of index page
-index_img:
+index_img:  r2.ru1ky.top/banner.png
 
 # The banner image of archive page
 archive_img:
