--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 猫窝
 subtitle: ''
-description: ''
+description: '快进来一起斯哈斯哈'
 keywords:
 author: Ru1ky
 language: zh-CN
