--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -29,7 +29,7 @@ menu:
   首页: / || fas fa-home
   归档: /archives/ || fas fa-archive
   分类: /categories/ || fas fa-folder-open
-  友链: /link/ || fas fa-link
+  友链: /flinks/ || fas fa-link
   关于: /about/ || fas fa-heart
 
 code_blocks:
@@ -594,7 +594,8 @@ waline:
   bg:
   # Use Waline pageview count as the page view count
   pageview: true
-  option:
+  option: 
+    reaction: false
 
 # Utterances
 # https://utteranc.es/
